--- a/src/assets/css/components/world-map.scss
+++ b/src/assets/css/components/world-map.scss
@@ -10,10 +10,6 @@
     overflow: hidden;
     border-radius: 30px;
     box-shadow: 0 20px 30px rgba(0,0,0,0.2);
-
-    svg {
-        background-color: #edf3f4;
-    }
 }
 
 .service-map__markers {
@@ -24,6 +20,7 @@
     height: 100%;
 }
 
+// Marker shown on map
 .service-map__marker {
     display: flex;
     flex-direction: column;
@@ -31,13 +28,62 @@
     width: 300px;
     margin-left: auto;
     margin-right: auto;
+}
 
-    .service-map__marker__inner {
-        background-color: #fff;
-        width: 100%;
-        border-radius: 8px;
-        margin-bottom: 20px;
-        box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+// Tooltip opened from mark
+.service-map__tooltip {
+    display: flex;
+    flex-direction: row;
+
+    width: 100%;
+    margin-bottom: 20px;
+
+    padding: 20px 10px;
+
+    text-align: left;
+
+    background-color: #fff;
+    border-radius: 8px;
+    
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+
+    h3, p {
+        margin: 0;
+    }
+
+    h3 {
+        margin-bottom: 10px;
+    }
+
+    &__icon {
+        display: flex;
+        justify-content: center;
+        height: 80px;
+        width: 100px;
+        overflow: hidden;
+
+        img {
+            height: 90px;
+            width: auto;
+            margin-top: auto;
+
+            // Custom sizing since the icons are not the same size
+            &.state--alarm {
+                height: 70px;
+            }
+    
+            &.state--failure {
+                height: 100px;
+            }
+        }
+
+
+    }
+
+    &__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 }
 
@@ -68,5 +114,11 @@
     &.service-map__state--failure {
         background: red;
         outline-color: rgba(red, 0.2)
+    }
+}
+
+.service-map__background {
+    svg {
+        background-color: #edf3f4;
     }
 }
