--- a/src/assets/css/templates/index.scss
+++ b/src/assets/css/templates/index.scss
@@ -1,3 +1,7 @@
+html {
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +9,26 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1.6rem;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.font-size--small {
+  font-size: 1.4rem;
+}
+
+.font-size--xsmall {
+  font-size: 1.2rem;
+}
+
+.text--label {
+  text-transform: capitalize;
+}
+
+.date--label {
+  color: gray;    
+} 
