--- a/src/assets/css/components/world-map.scss
+++ b/src/assets/css/components/world-map.scss
@@ -42,6 +42,10 @@
     display: flex;
     flex-direction: row;
 
+    visibility: hidden;
+    opacity: 0;
+    position: relative;
+
     width: 100%;
     margin-bottom: 2rem;
 
@@ -53,6 +57,7 @@
     border-radius: 0.8rem;
     
     box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.2);
+    transform: translateY(2rem);
 
     h3 {
         font-size: 2.2rem;
@@ -63,6 +68,15 @@
     p {
         margin-top: 0;
         margin-bottom: 2.0rem;
+    }
+
+    // Open state
+    &.is-open {
+        visibility: visible;
+        opacity: 1;
+        transform: translateY(0);
+
+        transition: 0.1s all ease-out;
     }
 
     .text--label {
@@ -147,7 +161,6 @@
     }
 }
 
-
 // Markers on map
 .service-map__state {
     display: block;
@@ -195,8 +208,42 @@
     }
 }
 
+// Global open tooltip styles 
+.service-map__tooltip.is-open {
+    + .service-map__state {
+        outline-width: 0.8rem;
+        transition: 0.2s all ease-out;
+
+        &.service-map__state--ok {
+            border-color: rgba(green, 0.2);
+        }
+    
+        &.service-map__state--alarm {
+            border-color: rgba(yellow, 0.2);
+        }
+    
+        &.service-map__state--failure {
+            border-color: rgba(red, 0.2);
+        }
+    }
+}
+
 .service-map__background {
     svg {
         background-color: #edf3f4;
     }
+}
+
+// Close button in tooltip
+.close-button {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.8rem;
+
+    -webkit-appearance: none;
+    border: 0;
+    background: transparent;
+    font-size: 2.2rem;
+
+    cursor: pointer;
 }
