--- a/src/assets/css/templates/index.scss
+++ b/src/assets/css/templates/index.scss
@@ -1,15 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
 html {
   font-size: 62.5%;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.6rem;
+  background-color: #fefefe;
+
+  color: #2e2e2e;
 }
 
 code {
@@ -17,12 +20,31 @@ code {
     monospace;
 }
 
+h1 {
+  font-size: 1.6rem;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+
+  margin-bottom: 2rem;
+  margin-left: 2rem;
+
+  text-transform: uppercase;
+}
+
+h3 {
+  font-size: 2.4rem;
+  margin-bottom: 1.5rem;
+  margin-top: 0.2rem;
+  font-weight: 600;
+
+}
+
 .font-size--small {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
 }
 
 .font-size--xsmall {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 
 .text--label {
