--- a/src/assets/css/components/world-map.scss
+++ b/src/assets/css/components/world-map.scss
@@ -1,10 +1,4 @@
-$color-red: #ff522f;
-$color-green: #6bb01a;
-$color-yellow: #ffc931;
-
-$grey-blue: #869fa3;
-
-$outline-offset: 0.7rem;
+@import '../variables';
 
 .service-map {
     position: relative;
@@ -63,6 +57,8 @@ $outline-offset: 0.7rem;
     overflow: hidden;
 
     svg {
+        display: flex;
+        height: 100%;
         background-color: #edf3f4;
     }
 }
@@ -97,7 +93,6 @@ $outline-offset: 0.7rem;
         .service-map__tooltip {
             visibility: visible;
             opacity: 1;
-            transform: translateY(60%);
 
             pointer-events: initial;
             height: auto;
@@ -106,6 +101,13 @@ $outline-offset: 0.7rem;
 
             @media (min-width: 768px) {
                 transform: translateY(-105%);
+            }
+
+            @media (max-width: 768px) {
+                top: 110%;
+                left: 0;
+                max-width: calc(100% - 2rem);
+                transform: none;
             }
         }
         .service-map__state {
@@ -145,6 +147,8 @@ $outline-offset: 0.7rem;
     
     box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.2);
     transform: translateY(-90%);
+
+    z-index: 2;
 
     p {
         margin-top: 0;
@@ -296,69 +300,70 @@ $outline-offset: 0.7rem;
 
 // Marker placements on map
 .service-map__marker {
-    position: absolute;
-    transform: translateX(-50%);
+
+    @media (min-width: 768px) {
+        position: absolute;
+        transform: translateX(-50%);
+    }
 
     &.eu-west-1 {
-        left: 42%;
-        top: 30%;
-
+        // Position whole tooltip + marker content on map in larger screen
         @media (min-width: 768px) {
             left: 45%;
             top: 31.5%;
         }
-
-        @media (max-width: 768px) {
-            .service-map__tooltip {
-                right: -6%;
+        // Give both their own position in mobile
+        @media (max-width: 767px) {
+            .service-map__state {
+                left: 45%;
+                top: 31.5%;
             }
         }
     }
 
     &.ap-northeast-1 {
-        left: 80%;
-        top: 40%;
 
         @media (min-width: 768px) {
             left: 90%;
             top: 45%;
         }
 
-        @media (max-width: 768px) {
-            .service-map__tooltip {
-                left: -55%;
+        @media (max-width: 767px) {
+            .service-map__state {
+                left: 86%;
+                top: 45%;
             }
         }
+
     }
 
     &.us-east-1 {
-        left: 21%;
-        top: 40%;
 
         @media (min-width: 768px) {
             left: 24%;
             top: 44%;
         }
 
-        @media (max-width: 768px) {
-            .service-map__tooltip {
-                left: 30%;
+        @media (max-width: 767px) {
+            .service-map__state {
+                left: 24%;
+                top: 44%;
             }
         }
+
     }
 
     &.ap-northeast-1:last-child {
-        left: 90%;
-        top: 40%;
 
         @media (min-width: 768px) {
             left: 93%;
             top: 45%;
         }
 
-        @media (max-width: 768px) {
-            .service-map__tooltip {
-                left: -70%;
+        @media (max-width: 767px) {
+            .service-map__state {
+                left: 93%;
+                top: 45%;
             }
         }
 
@@ -377,4 +382,6 @@ $outline-offset: 0.7rem;
     font-size: 2.2rem;
 
     cursor: pointer;
+
+    -webkit-tap-highlight-color: transparent;
 }
