--- a/src/assets/css/templates/index.scss
+++ b/src/assets/css/templates/index.scss
@@ -1,3 +1,5 @@
+@import '../variables';
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 html {
@@ -23,14 +25,15 @@ code {
 }
 
 h1 {
-  font-size: 1.6rem;
+  display: inline-flex;
+  font-size: 2rem;
   font-weight: 400;
   letter-spacing: 0.02em;
 
   margin-bottom: 2rem;
-  margin-left: 2rem;
+  margin-left: 0rem;
 
-  text-transform: uppercase;
+  box-shadow: 1rem 2rem 3rem rgba($grey-blue, 0.3);
 }
 
 h3 {
